fix(event): adjust spacing of time controls

--- a/src/style.css
+++ b/src/style.css
@@ -662,7 +662,14 @@ body {
 	input {
 		display: block;
 		width: 100%;
+	}
+
+	label {
 		flex: 1;
+	}
+
+	input {
+		flex: 2;
 	}
 }
 
